package yc.ma.LearnTogether.content.domain.model;

public enum ReviewStatus {
    APPROVED,
    REJECTED,
    PENDING
}
